--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;700&family=Ubuntu&display=swap');
 
+/* html reset */
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -8,6 +9,52 @@ body {
   font-family: var(--body-font), sans-serif;
 }
 
+fieldset {
+  border: 1px solid var(--border-gray);
+  padding: 15px 20px;
+  border-radius: 10px;
+}
+
+legend {
+  background-color: var(--legend-bg);
+  color: var(--legend-color);
+  font-weight: bold;
+  padding: 4px 10px;
+  border-radius: 5px;
+  letter-spacing: 1.2px;
+  font-size: 15px;
+}
+
+
+/* thin scrollbar */
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 10px;
+}
+
+*:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(120, 120, 120, .35);
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+*:hover {
+  scrollbar-color: rgba(120, 120, 120, .35) transparent;
+}
+
+/* flexbox stuff */
 .flex {
   display: flex;
   align-items: flex-start;
@@ -65,57 +112,21 @@ body {
   justify-content: flex-end;
 }
 
+/* layout */
 .fullWidth {
   width: 100%;
-}
-
-fieldset {
-  border: 1px solid var(--border-gray);
-  padding: 15px 20px;
-  border-radius: 10px;
-}
-
-legend {
-  background-color: var(--legend-bg);
-  color: var(--legend-color);
-  font-weight: bold;
-  padding: 4px 10px;
-  border-radius: 5px;
-  letter-spacing: 1.2px;
-  font-size: 15px;
 }
 
 .absolute {
   position: absolute !important;
 }
 
+.relative {
+  position: relative;
+}
+
 .bold {
   font-weight: bold;
-}
-
-.textAlignCenter {
-  text-align: center;
-}
-
-.primaryCard {
-  background-color: var(--primary-card-bg);
-}
-
-.secondaryCard {
-  background-color: var(--secondary-card-bg);
-}
-
-.displayNone {
-  display: none;
-}
-
-.container-md {
-  width: 40%;
-  min-width: 500px;
-}
-
-.container-md .input {
-  width: 100%;
 }
 
 .textAlignCenter {
@@ -137,6 +148,39 @@ legend {
   cursor: pointer;
 }
 
+.displayNone {
+  display: none;
+}
+
+.resizeVertical textarea {
+  resize: vertical !important;
+}
+
+/* containers */
+.primaryCard {
+  background-color: var(--primary-card-bg);
+}
+
+.secondaryCard {
+  background-color: var(--secondary-card-bg);
+}
+
+.container-md {
+  width: 40%;
+  min-width: 500px;
+}
+
+.container-md .input {
+  width: 100%;
+}
+
+.outline {
+  border: 2px solid var(--border-light);
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+
+/* Animations */
 @keyframes slidedown {
   to {
     transform: scaleY(1);
@@ -151,10 +195,6 @@ legend {
   animation: slidedown 0.2s forwards ease-out;
 }
 
-.resizeVertical textarea {
-  resize: vertical !important;
-}
-
 @keyframes slideup {
   to {
     transform: scaleY(1);
@@ -167,14 +207,4 @@ legend {
   opacity: 0;
   transform-origin: 50% 0%;
   animation: slidedown 0.2s forwards ease-in;
-}
-
-.outline {
-  border: 2px solid var(--border-light);
-  border-radius: 10px;
-  padding: 5px 10px;
-}
-
-.relative {
-  position: relative;
 }
